--- a/Challenge-RN/package.json
+++ b/Challenge-RN/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/stack": "^6.3.18",
     "expo": "~49.0.11",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.13.1",
     "react-native-web": "^0.19.9"
   },
   "devDependencies": {
